# koolbuster

./: .gitignore  CMakeLists.txt  README  ui
src/: koolbuster.c  koolbuster.h
src/ui/: main.ui
